# rust-xteink-x4

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  PLANS.md  README.md  diagram.json  justfile  partitions.csv  pyproject.toml  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cli/: justfile  upload_fonts.sh  xteink_cli.py
crates/ssd1677/: Cargo.toml  LICENSE-APACHE  README.md  deny.toml
crates/ssd1677/src/: color.rs  command.rs  config.rs  display.rs  error.rs  graphics.rs  interface.rs  lib.rs  lut.rs
crates/xteink-firmware/: Cargo.toml  build.rs  partitions.csv  sdkconfig.defaults
crates/xteink-firmware/src/: buffered_display.rs  cli.rs  cli_commands.rs  einked_slice.rs  feed_service.rs  filesystem.rs  input.rs  main.rs  runtime_diagnostics.rs  sd_card.rs  sdcard.rs  web_upload.rs  wifi_manager.rs
crates/xteink-scenario-harness/: Cargo.toml
crates/xteink-scenario-harness/src/: lib.rs
crates/xteink-scenario-harness/tests/: feed_browser.rs  frankenstein_epub_scroll.rs  fundamental_epub_scroll.rs  library_open_epub_flow.rs  navigation_and_settings_flows.rs  ui_modal_screenshot.rs  ui_screenshot_all.rs
crates/xteink-sim-desktop/: Cargo.toml
crates/xteink-sim-desktop/src/: main.rs
crates/xteink-sim-web/: Cargo.toml  index.html
crates/xteink-sim-web/src/: lib.rs
crates/xteink-ui/: Cargo.toml  build.rs
crates/xteink-ui/src/: app.rs  buffered_display.rs  diff.rs  eink.rs  embedded_fonts.rs  epub_font_backend.rs  epub_prep.rs  epub_render.rs  feed.rs  feed_browser_activity.rs  ferris_small.raw  file_browser.rs  file_browser_activity.rs  filesystem.rs  font_render.rs  information_activity.rs  input.rs  lib.rs  library_activity.rs  main_activity.rs  mock_filesystem.rs  reader_settings_activity.rs  settings_activity.rs  system_menu_activity.rs  test_display.rs
crates/xteink-ui/src/epub/: layout.rs  metadata.rs  mod.rs  spine.rs  streaming_zip.rs  tests.rs  tokenizer.rs
crates/xteink-ui/src/file_browser_activity/: epub.rs
crates/xteink-ui/src/ui/: activity.rs  components.rs  helpers.rs  mod.rs  theme.rs
docs/: BRANDING.md  CALIBRE.md  DEBUGGING_OBSERVABILITY_PLAN.md  EPUB_IMPLEMENTATION_COMPLETE.md  EREADER_MIN_GAPS_EXECUTION_TRACKER.md  FUTURE_FEATURES.md  GLOSSARY.md  PLAN.md  README.md  ROADMAP.md  ebook-libraries-2026.md  einked-parity-tracker.md  embedded-tasking-2026.md  epub-library-scan-2026-02-03.md  maintainability-audit-2026-02-10.md  ui-paradigms.md  xteink-x4-firmwares.md
docs/epub/: CROSSPOINT_MEMORY_AUDIT.md  EMBEDDED_MEMORY_ANTI_PATTERNS.md  SPEC_COMPLIANCE.md  STANDALONE_CRATE_ANALYSIS.md  architecture-plan.md  implementation-status.md
docs/features/: WASM_SIMULATOR.md  opds-feeds.md  rss-feeds.md  wasm-simulator.md
docs/hardware/: ssd1677-code-review.md
docs/testing/: ui-scenario-and-stack-loop.md
docs/ui/: creative-concepts.md  mockups.md
einked/: Cargo.toml
einked/docs/: v1.md
sample_books/: pg84-frankenstein.epub  sample.epub  sample.txt  war_and_peace_ch1.txt
scripts/: bulk_rename_crates.sh  check_binary_size.py  flash.sh  hw_smoke_epub.sh  stack_sizes_report.sh  ui_loop.sh
