[workspace]
resolver = "2"
members = [
    "crates/xteink-ui",
    "crates/xteink-scenario-harness",
    "crates/xteink-sim-web",
    "crates/xteink-sim-desktop",
    "crates/xteink-firmware",
]

[workspace.dependencies]
epublet = { package = "mu_epub", path = "../epublet", default-features = false }
epublet-render = { package = "mu-epub-render", path = "../epublet/crates/mu-epub-render" }
epublet-embedded-graphics = { package = "mu-epub-embedded-graphics", path = "../epublet/crates/mu-epub-embedded-graphics" }

[profile.release]
opt-level = "s"
lto = true
