[workspace]
resolver = "2"
members = [
    "crates/xteink-ui",
    "crates/xteink-scenario-harness",
    "crates/xteink-sim-web",
    "crates/xteink-sim-desktop",
    "crates/xteink-firmware",
]

[workspace.dependencies]
mu_epub = { package = "mu_epub", path = "../mu-epub", default-features = false }
mu_epub_render = { package = "mu-epub-render", path = "../mu-epub/crates/mu-epub-render" }
mu_epub_embedded_graphics = { package = "mu-epub-embedded-graphics", path = "../mu-epub/crates/mu-epub-embedded-graphics" }

[profile.release]
opt-level = "s"
lto = true
