[workspace]
resolver = "2"
exclude = ["epub-stream"]
members = [
    "crates/xteink-firmware",
    "einked",
]

[workspace.dependencies]
epub-stream = { package = "epub-stream", path = "epub-stream", default-features = false }
epub_stream_render = { package = "epub-stream-render", path = "epub-stream/crates/epub-stream-render" }
epub_stream_embedded_graphics = { package = "epub-stream-embedded-graphics", path = "epub-stream/crates/epub-stream-embedded-graphics" }
ssd1677 = { path = "ssd1677" }

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
opt-level = 0
debug = "line-tables-only"
incremental = true

[profile.dev.package."*"]
opt-level = 1
debug = false

[profile.test]
opt-level = 1
debug = "line-tables-only"
incremental = true
