[package]
name = "ssd1677"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Driver for the SSD1677 e-Paper display controller, for use with embedded-hal v1.0"
documentation = "https://docs.rs/ssd1677"
repository = "https://github.com/yourusername/ssd1677"
readme = "README.md"
keywords = ["embedded", "epd", "epaper", "e-ink", "ssd1677", "display", "no-std"]
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[dependencies]
embedded-graphics-core = { version = "0.4.0", optional = true }
embedded-hal = "1.0.0"
log = { version = "0.4", default-features = false }

[features]
default = ["graphics"]
std = []
graphics = ["dep:embedded-graphics-core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
