[package]
name = "xteink-firmware"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xteink-firmware"
harness = false

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
xteink-ui = { path = "../xteink-ui", features = ["std"] }
embedded-hal = "1.0.0"
embedded-graphics = "0.8.0"
crc32fast = "1.4.2"
flate2 = { version = "1.1.5", default-features = false, features = ["rust_backend"] }

[build-dependencies]
embuild = "0.33"
