[package]
name = "xteink-firmware"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xteink-firmware"
harness = false

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", default-features = false, features = ["std", "binstart"] }
einked = { path = "../../einked", features = ["std"] }
einked-ereader = { path = "../../einked/crates/einked-ereader", features = ["std"] }
ssd1677 = { workspace = true }
embedded-hal = "1.0.0"
embedded-graphics = "0.8.0"
crc32fast = "1.4.2"
embedded-svc = "0.28"
image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg"] }
feed-rs = "2.3.1"

[build-dependencies]
embuild = "0.33"
