[package]
name = "xteink-sim-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
xteink-ui = { path = "../xteink-ui", features = ["std"] }
embedded-graphics = "0.8"
embedded-graphics-web-simulator = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "KeyboardEvent"] }
console_error_panic_hook = "0.1"
