[package]
name = "xteink-ui"
version = "0.1.0"
edition = "2021"

[features]
default = ["fontdue"]
std = [
    "mu_epub/std",
    "mu_epub/layout",
    "dep:mu_epub_render",
    "dep:mu_epub_embedded_graphics",
    "dep:image",
]

[dependencies]
embedded-graphics = "0.8"
embedded-text = "0.7.3"

# Logging (no_std compatible)
log = "0.4"

# EPUB support now provided by external mu_epub crate

# TTF font rendering with no_std support - always enabled
fontdue = { version = "0.9.3", optional = true }
image = { version = "0.25.9", default-features = false, features = ["bmp", "jpeg", "png"], optional = true }

# External EPUB parser crate
mu_epub = { workspace = true }
mu_epub_render = { workspace = true, optional = true }
mu_epub_embedded_graphics = { workspace = true, optional = true }

# E-ink display driver (re-exported for firmware use)
# Using local path during development - change to crates.io version when published
ssd1677 = { workspace = true }

[build-dependencies]
fontdue = "0.9.3"

[dev-dependencies]
# For tests

# Tests use miniz_oxide for decompression, not flate2
# flate2 disabled due to std compatibility issues
